<resources>
    <string name="app_name">AsBooster</string>
    <string name="tittle_login">Login to soundcloud</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="text_login_button">login</string>
    <string name="button_audios_login">login to soundcloud</string>
    <string name="message_login_empty_fields">Some fields are empty</string>
    <string name="message_login_fail">Authentication error, try again</string>
    <string name="audio_item_author">Author</string>
    <string name="audio_item_name">Name</string>
    <string name="hint_search_audio">Search on soundcloud</string>
    <string name="tittle_add_effect">Effects</string>
    <string name="plays_count_placeholder">100k</string>
    <string name="audio_post_time">Posted 1 month ago</string>
    <string name="audio_time">3:32</string>
    <string name="unknown_artist">Unknown artist</string>
    <string name="posted_text">Posted</string>
    <string name="unknown_post_date">Unknown post date</string>
    <string name="placeholder_audio_name">Name</string>
    <string name="placeholder_artist">Artist</string>
    <string name="elapsed_time_placeholder">0:00</string>
    <string name="remaining_time_placeholder">3:33</string>
    <string name="effect_name">Effect Name</string>
    <string name="bass_boost_effect_name">Bass Boost</string>
    <string name="reverb_effect_name">Reverb</string>
    <string name="loudness_effect_name">Loudness</string>
    <string name="empty_audios_text">Start typing a track name</string>
    <string name="saved_fragment_placeholder">Saved fragment</string>
    <string name="search_fragment_title">search</string>
    <string name="saved_fragment_title">saved</string>
    <string name="saved_message">Saved to favorites</string>
    <string name="saved_placeholder_text">Here will be your favorite tracks</string>
</resources>
