<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/audio_item_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[11]" />

    <TextView
        android:id="@+id/audio_item_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/audio_item_author"
        android:textColor="#555555"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/audio_item_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/audio_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/audio_item_name"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/audio_item_image"
        app:layout_constraintTop_toBottomOf="@+id/audio_item_author" />

    <ImageView
        android:id="@+id/image_play"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/icon_play"
        app:layout_constraintBottom_toBottomOf="@+id/audio_plays_count"
        app:layout_constraintStart_toEndOf="@+id/audio_item_image"
        app:layout_constraintTop_toTopOf="@+id/audio_plays_count"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/audio_plays_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/plays_count_placeholder"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/image_play"
        app:layout_constraintTop_toBottomOf="@+id/audio_item_name" />

    <TextView
        android:id="@+id/post_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        android:text="@string/audio_post_time"
        app:layout_constraintStart_toEndOf="@+id/audio_plays_count"
        app:layout_constraintTop_toBottomOf="@+id/audio_item_name" />

    <TextView
        android:id="@+id/track_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_time"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
